added something coming later message

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,10 @@ body {
   background-color: #fdfdfd;
 }
 
+small {
+  font-size: 0.4em;
+}
+
 .App {
   padding: 16px 16px;
   font-family: 'Quicksand', sans-serif;
