--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,12 @@ small {
   font-size: 0.6em;
 }
 
+code {
+  background-color: lightgray;
+  padding: 2px 4px;
+  border-radius: 3px;
+}
+
 .App {
   padding: 16px 16px;
   font-family: 'Quicksand', sans-serif;
